--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'eclipse'
     id 'war'
     id 'org.akhikhl.gretty' version '1.4.2'
 }
@@ -8,32 +9,93 @@ repositories {
     jcenter()
 }
 
-def	jettyVersion = "9.4.7.v20170914"
+def	jettyVersion = "9.4.8.v20171121"
+def jerseyVersion = "2.26"
 
 dependencies {
 
-	compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.8.v20171121'
+	//Common Annotations JSR-250
+	compile group: 'javax.annotation', name: 'jsr250-api', version: '1.0'
 
-	compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.8.v20171121'
+	//Jetty
+	compile group: 'org.eclipse.jetty', name: 'jetty-server', version: jettyVersion
 
-	compile group: 'org.eclipse.jetty', name: 'jetty-util', version: '9.4.8.v20171121'
+	compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: jettyVersion
 
+	compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: jettyVersion
 
-	compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.26'
+	compile group: 'org.eclipse.jetty', name: 'jetty-util', version: jettyVersion
 
-	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '2.26'
+	//Jersey
+	compile group: 'org.glassfish.jersey.core', name: 'jersey-common', version: jerseyVersion
 
-	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: '2.26'
+	compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: jerseyVersion
 
-	compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
+	compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: jerseyVersion
 
-	compile 'org.glassfish.jersey.core:jersey-common:2.26'
+	compile group: 'org.glassfish.jersey.bundles', name: 'jaxrs-ri', version: jerseyVersion
+
+	//Jetty
+	compile group: 'org.glassfish.jersey.connectors', name: 'jersey-jetty-connector', version: jerseyVersion
+
+	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: jerseyVersion
+
+	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-servlet', version: jerseyVersion
+
+	//TODO ???
+	//Servlet
+	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: jerseyVersion
+
+	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: jerseyVersion
+
+	//WADL
+	compile group: 'org.glassfish.jersey.ext', name: 'jersey-wadl-doclet', version: jerseyVersion
 
 	compile 'org.glassfish.jersey.inject:jersey-hk2:2.26'
 
+	//Bean Validation
+	compile group: 'org.glassfish.jersey.ext', name: 'jersey-bean-validation', version: jerseyVersion
+
+	//CDI
+	//compile group: 'org.jboss.weld.servlet', name: 'weld-servlet-core', version: '2.4.6.Final'
+	//compile group: 'org.glassfish.jersey.ext.cdi', name: 'jersey-weld2-se', version: jerseyVersion
+
+	//compile group: 'org.jboss.weld', name: 'weld-core', version: '2.4.6.Final'
+
+	//TODO ???
+	//compile group: 'org.glassfish.jersey.ext.cdi', name: 'jersey-cdi1x', version: jerseyVersion
+	//TODO ???
+	//compile group: 'org.glassfish.jersey.ext.cdi', name: 'jersey-cdi1x-validation', version: jerseyVersion
+	//TODO ???
+	//compile group: 'org.glassfish.jersey.ext.cdi', name: 'jersey-cdi1x-ban-custom-hk2-binding', version: jerseyVersion
+
+	//compile group: 'org.glassfish.jersey.inject', name: 'jersey-cdi2-se', version: jerseyVersion
+
+	//JSON
+	compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: jerseyVersion
+
+	//Logging
 	compile group: 'log4j', name: 'log4j', version: '1.2.17'
 
-	testCompile 'junit:junit:5.0'
+	//Testing
+	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.0'
+	testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
+
+	compile 'org.glassfish.jersey.inject:jersey-hk2:2.26'
+
+
+	testCompile group: 'org.glassfish.jersey.test-framework', name: 'jersey-test-framework-core', version: jerseyVersion
+
+	//TODO pom jersey-test-framework-provider-bundle
+	
+	//TODO ???
+	testCompile group: 'org.glassfish.jersey.test-framework.providers', name: 'jersey-test-framework-provider-external', version: jerseyVersion
+
+	testCompile group: 'org.glassfish.jersey.test-framework.providers', name: 'jersey-test-framework-provider-grizzly2', version: jerseyVersion
+
+	testCompile group: 'org.glassfish.jersey.test-framework', name: 'jersey-test-framework-util', version: jerseyVersion
+
+	//jersey-test-framework-provider-bundle
 }
 
 gretty {
