--- a/build.gradle
+++ b/build.gradle
@@ -78,8 +78,9 @@ dependencies {
 	compile group: 'log4j', name: 'log4j', version: '1.2.17'
 
 	//Testing
-	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.0'
-	testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
+	testCompile "junit:junit:4.12"
+	//testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.0'
+	//testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
 
 	compile 'org.glassfish.jersey.inject:jersey-hk2:2.26'
 
