--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ dependencies {
 
 	//Common Annotations JSR-250
 	compile group: 'javax.annotation', name: 'jsr250-api', version: '1.0'
+	
+	//Servlet
+	compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
 
 	//Jetty
 	compile group: 'org.eclipse.jetty', name: 'jetty-server', version: jettyVersion
@@ -29,18 +32,20 @@ dependencies {
 	//Jersey
 	compile group: 'org.glassfish.jersey.core', name: 'jersey-common', version: jerseyVersion
 
-	compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: jerseyVersion
-
 	compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: jerseyVersion
 
 	compile group: 'org.glassfish.jersey.bundles', name: 'jaxrs-ri', version: jerseyVersion
+
+	//Jersey Client
+	compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: jerseyVersion
+	
 
 	//Jetty
 	compile group: 'org.glassfish.jersey.connectors', name: 'jersey-jetty-connector', version: jerseyVersion
 
 	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: jerseyVersion
 
-	compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-servlet', version: jerseyVersion
+	//compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-servlet', version: jerseyVersion
 
 	//TODO ???
 	//Servlet
@@ -79,8 +84,8 @@ dependencies {
 
 	//Testing
 	testCompile "junit:junit:4.12"
-	//testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.0'
-	//testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.0'
+    //testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "5.1.0"
+    //testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: "1.1.0"
 
 	compile 'org.glassfish.jersey.inject:jersey-hk2:2.26'
 
@@ -102,4 +107,9 @@ dependencies {
 gretty {
     httpPort = 9091
     contextPath = '/'
+}
+
+task wrapper(type: Wrapper) {
+	description = 'Generates gradlew[.bat] scripts'
+	gradleVersion = '4.6'
 }
