added validation exception mapper

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,3 @@
-hero.name.not_empty=name is empty
-hero.realname.not_empty=real name is empty
-search.string.empty=query string is empty
+hero.name.not_empty=Name is empty.
+hero.realname.not_empty=Real name is empty.
+search.string.empty=Query string is empty.
