changed postman collection

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,4 @@
 hero.name.not_empty=Name is empty.
 hero.realname.not_empty=Real name is empty.
+hero.city.not_empty=City is empty.
 search.string.empty=Query string is empty.
