added integration tests for test

--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,12 @@ dependencies {
 
 }
 
+test {
+    filter {
+        //include all integration tests
+        includeTestsMatching "*IntegrationTest"
+    }
+}
 gretty {
     httpPort = 9091
     contextPath = '/'
